modify app-component.* et add search-box component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<h2>{{ title }} app is running!</h2>
+<h2>Bonjour</h2>
+<p> {{ title }} app is running!</p>
+
+
+<app-search-box entree={{title}}></app-search-box>
 <app-first-component></app-first-component>
